# kortex

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  error-codes.txt  flags.txt  installation.txt  makefile  makefile.in  standards.txt  todo.txt
.github/: CODEOWNERS
cmake/: config.cmake.in  flags.cmake  kortex.pc.in  sources.cmake
include/kortex/: bit_operations.h  check.h  color.h  color_map.h  defs.h  eigen_conversion.h  fileio.h  filter.h  geometry.h  heap.h  heap.tcc  histogram.h  image.h  image_conversion.h  image_io.h  image_io_jpg.h  image_io_png.h  image_io_pnm.h  image_paint.h  image_processing.h  image_space_mapping.h  image_space_structs.h  indexed_array.h  indexed_types.h  keyed_value.h  kmatrix.h  kvector.h  lapack_externs.h  linear_algebra.h  linux_windows_defs.h  log_manager.h  math.h  matrix.h  mem_manager.h  mem_unit.h  message.h  minmax.h  object_cache.h  option_parser.h  pair_indexed_array.h  (+15 more)
mfiles/: load_binary.m
pcfiles/: blas.pc  eigen3.pc  libjpeg.pc
src/: bit_operations.cc  check.cc  color.cc  color_map.cc  eigen_conversion.cc  fileio.cc  filter.cc  geometry.cc  histogram.cc  image.cc  image_conversion.cc  image_io.cc  image_io_jpg.cc  image_io_png.cc  image_io_pnm.cc  image_paint.cc  image_processing.cc  image_processing.tcc  image_space_mapping.cc  image_space_structs.cc  indexed_array.cc  indexed_array.tcc  indexed_types.cc  kmatrix.cc  linear_algebra.cc  linear_algebra_blas.cc  linear_algebra_eigen.cc  linear_algebra_lapack.cc  log_manager.cc  math.cc  matrix.cc  mem_manager.cc  mem_unit.cc  message.cc  message.tcc  minmax.cc  object_cache.cc  object_cache.tcc  option_parser.cc  pair_indexed_array.cc  (+18 more)
tests/image-io/: main.cc  makefile
tests/kmatrix/: main.cc  makefile
